// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductImage should render a component with an image 1`] = `
<img
  alt="Product"
  className="productImg undefined"
  src="https://atiladev.com"
/>
`;

exports[`ProductImage should show the component with the image of product 1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="Product"
    className="productImg undefined"
    src="./coffee-mug.png"
  />
</div>
`;
